# emscripten-plugins

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp  server.py
.cache/clangd/index/: abi_macros.hpp.4B070D1A40497C95.idx  abstract_runner.cpp.DBE857A187E27433.idx  abstract_runner.h.A13C8DA22D1DFEDE.idx  adl_serializer.hpp.08F07A1BC8D33F57.idx  app_window_params.h.47D4609C5B1C9C10.idx  backend_pointers.h.B5E9F41A69005802.idx  backend_window_helper.cpp.404801C3FA7C29EB.idx  backend_window_helper.h.A93C91C35A2E98D0.idx  begin.hpp.31A11A044CC2F93E.idx  binary_reader.hpp.4B1674E11AFA188A.idx  binary_writer.hpp.2EC0A0D33BB7A377.idx  borderless_movable.cpp.01E7A176BC762AFD.idx  borderless_movable.h.58954512D03E0635.idx  byte_container_with_subtype.hpp.744CA2BF6173F892.idx  clock_seconds.cpp.E00C8F2A6E9D45BC.idx  clock_seconds.h.5CE3BE97D6C2B5CC.idx  cpp_future.hpp.A672D31718E93F3A.idx  detected.hpp.7931C1085A76C8D1.idx  docking_details.cpp.64FB2B9E101DECF3.idx  docking_details.h.75773E92B493AFB7.idx  docking_params.h.1F516F8413CC50A6.idx  dpi_aware.cpp.272BF0413A47514E.idx  dpi_aware.h.5C434041CC1CA1F0.idx  end.hpp.00F5FE830654B0F3.idx  exceptions.hpp.64CA57245A36A19A.idx  from_json.hpp.FC21AC795AB1FF12.idx  functional_utils.cpp.3A982F46BEF4DB1A.idx  functional_utils.h.EFACBBFA7C8B1F67.idx  getAppleBundleResourcePath.h.85A95827014F1504.idx  getAppleBundleResourcePath.mm.42AF1EE2A576AB17.idx  glad.c.24A6CCE60D61C43B.idx  glad.h.D16D8393007DC0DD.idx  glfw_window_helper.cpp.1363477308E53BAA.idx  glfw_window_helper.h.05AAF0437FD7729C.idx  hash.hpp.6F7303A70D02F40F.idx  hedley.hpp.8FE5B1580136BBFC.idx  hedley_undef.hpp.CE8AC71E6F462C3F.idx  hello_imgui.cpp.2D0667F05F67BFFD.idx  hello_imgui.h.46FA921D79CE19DB.idx  hello_imgui_assets.cpp.6762B7B98A68C769.idx  (+165 more)
.github/workflows/: deploy.yml
api/: pyproject.toml
api/src/plugin_api/: __init__.py  __main__.py  app.py
api/src/plugin_api/api/: __init__.py  emscripten_client.py  plugins.py
api/src/plugin_api/cli/: __init__.py  utils.py
cmake/: helpers.cmake  plugin.cmake
inc/lib/: app_host.h  plugin_api.h  plugin_manager.h
lib/: plugin_api.h
plugins/plugin_a/: CMakeLists.txt  main.cpp
plugins/plugin_b/: CMakeLists.txt  main.cpp
scripts/: get_deps_mingw.sh
src/: app_host.cpp  plugin_manager.cpp
web/: coi-serviceworker.js  index.html  serve.py
